fixtures/positive/tab_structure.inc
---
title = Tab data
[structure]
delim = tab
---
name	score
Ada	21
Babbage	12
