fixtures/negative/empty_section.inc
---
title = Empty section
[columns]
---
name,score
Ada,21
